Fix image source paths to use consistent casing

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <table>
 <tr>
 <td id="groen1">Groen</td>
-<td id="blauw1"><img src="afbeeldingen/Blauw 1.png" alt="zee" width="100" height="100"></td>
+<td id="blauw1"><img src="Afbeeldingen/Blauw 1.png" alt="zee" width="100" height="100"></td>
 <td id="paars1">Paars</td>
-<td id="rood1"><img src="afbeeldingen/Rood1.png" alt="Duivel chili peper" width="100" height="100"></td>
+<td id="rood1"><img src="Afbeeldingen/Rood1.png" alt="Duivel chili peper" width="100" height="100"></td>
 </tr>
 <tr>
 <td id="groen2">Darkgreen</td>
-<td id="blauw2"><img src="afbeeldingen/Blauw 2.png" alt="blauwe vogel" width="100" height="100"></td>
+<td id="blauw2"><img src="Afbeeldingen/Blauw 2.png" alt="blauwe vogel" width="100" height="100"></td>
 <td id="paars2">Indigo</td>
 <td id="rood2"><img src="Afbeeldingen/Rood2.png" alt="Rode vogel" width="100" height="100"></td>
 </tr>
@@ -29,7 +29,7 @@
 <td id="groen3">Lime</td>
 <td id="blauw3"><img src="Afbeeldingen/Blauw3.png" alt="Blauwe bessen" width="100" height="100"></td>
 <td id="paars3">Darkviolet</td>
-<td id="rood3"><img src="afbeeldingen/Rood3.png" alt="Aardbeien" width="100" height="100"></td>
+<td id="rood3"><img src="Afbeeldingen/Rood3.png" alt="Aardbeien" width="100" height="100"></td>
 </tr>
 <tr>
 <td id="groen4">Lightgreen</td>
